add(frontend, auth): login dan logout
