# backend/routes/api.php
@@ -14,8 +14,16 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
+Route::post('/register', [\App\Http\Controllers\Api\AuthController::class, 'register'])->name('register');
+
+Route::post('/login', [\App\Http\Controllers\Api\AuthController::class, 'login'])->name('login');
+
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
+});
+
+Route::middleware('auth:sanctum')->group(function () {
+    Route::post('/logout', [\App\Http\Controllers\Api\AuthController::class, 'logout'])->name('logout');
 });
 
 Route::resource('residents', App\Http\Controllers\API\ResidentAPIController::class)
